<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".edu.swu.MainActivity">
    <ImageView
        android:scaleType="centerCrop"
        android:src="@mipmap/bg2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/ipt_username"
        app:layout_constraintStart_toStartOf="@id/gl_start"/>
    <EditText
        android:id="@+id/ipt_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_username"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/ipt_password"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/gl_start" />
    <EditText
        android:id="@+id/ipt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/gl_start" />
    <Button
        android:id="@+id/btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:onClick="sign"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button"
 />
    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        tools:ignore="MissingConstraints,OnClick" />
    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:progress="5"
        android:max="10"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>